minor fix; searchbar dropdown visibility

--- a/src/ugd_frontend/styles/SearchBar.css
+++ b/src/ugd_frontend/styles/SearchBar.css
@@ -11,7 +11,6 @@
   align-items: center;
   padding: 2.5px;
   border-radius: 30px;
-  overflow: hidden;
   background: linear-gradient(to right, #5b4e81, #6f649c, #837bb7, #9e95ce, #b9b3e4, #d6cf9a);
 }
 
@@ -135,110 +134,3 @@
   margin-top: 15px;
   font-size: 18px;
 }
-
-
-
-
-
-
-
-/* OG  */
-
-
- /* .searchbar-wrapper {
-  max-width: 800px;
-  width: 100%;
-  padding: 20px;
-  margin: 0 auto; 
-}
-
-.searchbar {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding: 8px;
-  border-radius: 30px;
-  box-shadow: 0 5px 20px rgba(255, 255, 255, 0.2);
-  background: linear-gradient(to right, #5b4e81, #6f649c, #837bb7, #9e95ce, #b9b3e4, #d6cf9a);
-}
-
-.search-input {
-  flex: 1;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  font-size: 18px;
-  background-color: #faf8ef;
-  transition: border 0.3s ease;
-}
-
-.filter-icon-button, .search-icon-button {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  margin: 0 10px;
-  color: #fff;
-}
-
-.search-icon-button {
-  background: linear-gradient(to right, #667eea, #764ba2);
-  font-size: 22px;
-}
-
-.filter-icon-button {
-  font-size: 28px;
-}
-
-@media (max-width: 480px) {
-  .searchbar-wrapper {
-    padding: 2vw;
-  }
-
-  .search-input {
-    font-size: 4vw;
-    padding: 1vw 4vw 1vw 2vw;
-  }
-
-  .filter-icon-button, .search-icon-button {
-    width: 8vw;
-    height: 8vw;
-    font-size: 5vw;
-  }
-}
-
-.icon-button:hover {
-  background: linear-gradient(to right, #5a63c6, #6e3c9b);
-}
-
-.searchbar-loading {
-  margin-top: 15px;
-  text-align: center;
-}
-
-.searchbar-loader {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  border: 4px solid #ccc;
-  border-radius: 50%;
-  border-top-color: #667eea;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-      transform: rotate(0deg);
-  }
-  100% {
-      transform: rotate(360deg);
-  }
-}
-
-.searchbar-greeting {
-  margin-top: 15px;
-  font-size: 18px;
-} */
